# agentic-owasp-security-scanner

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docs/: Backlog.md  PRD.md
examples/: demo_scan.py  run_demo.py
scripts/: run_scan.py  smoke_ai.py
src/agentic_scanner/: __init__.py  cli.py
src/agentic_scanner/agents/: __init__.py  a01_access_control.py  a03_injection.py  base.py
src/agentic_scanner/core/: __init__.py  config.py  memory.py  planning.py  reasoning.py  scanner.py
src/agentic_scanner/utils/: __init__.py  discovery.py  fingerprints.py  http_client.py  json_report.py  reporting.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py
