[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-owasp-scanner"
version = "0.1.0"
description = "Autonomous AI-powered OWASP Top 10 security testing system"
authors = [{name = "Shayan Banerjee", email = "streetquant@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "google-generativeai>=0.3.0",
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "cryptography>=41.0.0",
    "jwt>=1.3.1",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "redis>=5.0.0",
    "sqlite3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "pre-commit>=3.4.0",
    "coverage>=7.3.0",
]

[project.scripts]
agentic-scanner = "agentic_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true